# competitive-programming

./: CMakeLists.txt  README.md
CSES/Introductory Problems/: Bit Strings.cpp  Coin Piles.cpp  Increasing Array.cpp  Missing Number.cpp  Number Spiral.cpp  Permutations.cpp  Repetitions.cpp  Trailing Zeros.cpp  Two Knights.cpp  Two Sets.cpp  Weird Algorithm.cpp
Codeforces/Educational Rounds/: 1251D.cpp  1342D.cpp  1400C.cpp  1455D.cpp  152.cpp  1809A.cpp  1989E.java  (+1 more)
acmp.ru/: 100.py  103.cpp  1080.cpp  1081.cpp  1082.cpp  11.py  113.cpp  114.cpp  115.cpp  116.cpp  1160.cpp  1161.cpp  121.cpp  122.cpp  135.cpp  138.cpp  1391.cpp  143.cpp  144.cpp  145.cpp  1464.cpp  16.cpp  172.cpp  181.cpp  189.cpp  190.cpp  194.cpp  29.cpp  334.cpp  335.cpp  38.cpp  40.cpp  401.cpp  453.cpp  471.cpp  480.cpp  500.cpp  518.cpp  525.cpp  535.cpp  (+9 more)
eolymp/: 2388-accumulate.cpp  2388.cpp
informatics.msk/: 102.cpp  103.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp  111.cpp  111499.cpp  112.cpp  112735.cpp  113.cpp  113656.cpp  1182.cpp  120.cpp  1209.cpp  1228.cpp  1370.cpp  1406.cpp  1421.cpp  1430.cpp  1435.cpp  1456.cpp  153.cpp  154.cpp  1568.cpp  1629.cpp  1667.cpp  1838.cpp  190.cpp  192.cpp  199.cpp  201.cpp  203.cpp  206.cpp  227.cpp  228.cpp  234.cpp  235.cpp  253.cpp  (+97 more)
trd/: ConvexHull.cpp.txt  Fenw.cpp.txt  LazySegmentTree.cpp.txt  PrefFunc.cpp  SegmentTree.cpp.txt  SparseTable.cpp.txt  StringHash.cpp  Z-алгоритм.cpp  bridge.cpp.txt  centroid.cpp  dp-segment.cpp  rope.cpp.txt  tier(vector-pair).cpp  ДО1.cpp  ДО3.cpp  СНМ.cpp  Сортировки.cpp  Тернарный поиск.cpp  Фенвик3.cpp
(+2319 files in other folders)
